--- a/README
+++ b/README
@@ -5,6 +5,14 @@ Door to the dada
 There were several things that I wanted to do with static websites but
 couldn't. Here I finally take the plunge and add them dynamically.
 
+Running
+--------------
+Check it out.
+
+Do stuff. ::
+
+    ./manage.py collectstatic
+
 Features
 ----------------
 Headers on the website include
